ajustes para rodar no mac